Replaced Paths.get() with Path.of() as Paths may get deprecated in the future